# OwnCord

./: .gitignore  API.md  CLAUDE.md  CODE_REVIEW.md  README.md
.github/workflows/: build.yml  ci.yml  release.yml
Client/tauri-client/src/: main.ts
Client/tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
Client/tauri-client/src-tauri/src/: commands.rs  credentials.rs  lib.rs  ptt.rs
Client/tauri-client/src/components/: ChannelSidebar.ts  DmSidebar.ts  GifPicker.ts  MessageInput.ts  MessageList.ts  PinnedMessages.ts  SettingsOverlay.ts  VideoGrid.ts  VoiceChannel.ts  VoiceWidget.ts
Server/: go.mod  go.sum
Server/admin/: admin.go  handlers_backup.go  handlers_channels.go  logstream.go  setup_handler.go  setup_handler_test.go  update_handlers.go
Server/api/: auth_handler.go  auth_handler_test.go  channel_handler.go  diagnostics_handler.go  invite_handler.go  invite_handler_test.go  livekit_proxy.go  metrics_handler.go  middleware.go  router.go  upload_handler.go
Server/auth/: password.go  ratelimit.go
Server/config/: config.go  config_test.go
Server/db/: admin_queries.go  channel_queries.go  dm_queries.go  message_queries.go  migrate.go  models.go
Server/migrations/: 006_member_video_permissions.sql
Server/storage/: storage.go
Server/updater/: updater.go
Server/ws/: export_test.go  handlers.go  handlers_chat.go  hub.go  livekit.go  livekit_process.go  livekit_test.go  livekit_webhook.go  messages.go  serve.go  voice_controls.go  voice_handlers.go  voice_handlers_test.go  voice_join.go  voice_leave.go  voice_room.go  voice_room_test.go
(+61 files in other folders)
